# synapse-mcp

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml  server.json
.claude/commands/: synapse.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
doc/: tool-authoring.md
src/synapse_mcp/: __init__.py  __main__.py  app.py  auth_middleware.py  connection_auth.py  context_helpers.py  tools.py  utils.py
src/synapse_mcp/managers/: __init__.py  curation_task_manager.py
src/synapse_mcp/oauth/: client_registry.py  factory.py  jwt.py  proxy.py
src/synapse_mcp/services/: CLAUDE.md  __init__.py  activity_service.py  curation_task_service.py  docker_service.py  entity_service.py  evaluation_service.py  form_service.py  schema_organization_service.py  search_service.py  submission_service.py  team_service.py  tool_service.py  user_service.py  utility_service.py  wiki_service.py
src/synapse_mcp/session_storage/: redis_backend.py
tests/: CLAUDE.md  conftest.py  test_activity_service.py  test_auth_middleware.py  test_connection_auth.py  test_curation_task_manager.py  test_curation_task_service.py  test_curation_tasks.py  test_entity_service.py  test_evaluation_service.py  test_form_service.py  test_form_services.py  test_multi_user_isolation.py  test_oauth_factory.py  test_oauth_fixup_middleware.py  test_oauth_jwt.py  test_oauth_proxy.py  test_package.py  test_schema_organization_service.py  test_search_tool.py  test_submission_service.py  test_team_service.py  test_tool_service.py  test_user_service.py  test_utility_service.py  test_wiki_service.py
tests/evals/: test_tool_selection.py
(+2 files in other folders)
